2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style, and fixed the
	show graphs in "top_n" report item, now it is static graph and show a as
	text of bars (or pie pieces) the agent name and module for more clear and
	when you have same agents with distints modules, now the graph don't group
	by agent.
	
	Fixes: #3483852
	
	Merged bugfix from trunk.

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_monitores.php, operation/agentes/ver_agente.php:
	cleaned source code style.
	
	* include/functions_agents.php: refixed the query to extract modules for the
	ACL policies.
	
	Merged bugfix from trunk.
	
2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/visual_console_builder.ajax.php:  Removed max, min
	options when a module graph is created in visual console editor.
	
	Merged bugfix from trunk.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_reporting.php,
	include/functions_groups.php: Fixed a problem in Group View that hide empty parent
	groups when their children has agents.

2012-02-10  Miguel de Dios  <miguel.dedios@artica.es>
	
	* * extensions/module_groups.php, include/functions_modules.php,
	godmode/agentes/module_manager_editor_prediction.php: cleaned
	source code style.

	* godmode/agentes/configurar_agente.php: cleaned source code style and fixed
	the duplication of module.
	
	* include/functions_agents.php: fixed the get modules into function
	"agents_get_modules", before the function return ever the policy modules
	without apply filter.
	
	Fixes: #3482260

	Bugfix merged from trunk.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_groups.php: Added links to different sections with
	the suitable filters. 

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php: Changed module status image for unknown
	status to gray.
